# Vega

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GETTING-STARTED.md  README.md  SPEC.md  STATUS.md  docker-compose.yml  render.yaml  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: 00-project-manager.md  01-quant-domain-validator.md  02-pricing-models-engineer.md  03-backend-developer.md  04-frontend-developer.md  05-ui-ux-designer.md  06-data-engineer.md  07-database-administrator.md  08-security-engineer.md  09-devops-engineer.md  10-qa-engineer.md  11-code-reviewer.md  12-performance-engineer.md  13-accessibility-specialist.md  14-observability-engineer.md  15-documentation-engineer.md  16-risk-correctness-reviewer.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c1e7a3e9d78_phase12_user_id_and_per_user_index.py  9c8f64a81798_create_calculation_tables.py  c6ca2f3c271c_add_q_to_calculation_inputs.py
backend/app/: main.py  middleware.py  repl.py  serve.py
backend/app/api/: backtest.py  calculations.py  heatmap.py  price.py  tickers.py
backend/app/backtest/: engine.py
backend/app/core/: auth.py  config.py  logging.py  rate_limit.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/pricing/: __init__.py  binomial.py  black_scholes.py  black_scholes_vec.py  monte_carlo.py
backend/app/services/: historical.py  tickers.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_backtest.py  test_calculations.py  test_environment.py  test_health.py  test_heatmap.py  test_logging.py  test_price.py  test_rate_limit.py  test_security_headers.py  test_tickers.py
backend/tests/backtest/: test_engine.py
backend/tests/db/: test_models.py  test_session.py
backend/tests/pricing/: test_binomial.py  test_black_scholes_math.py  test_black_scholes_vec.py  test_greeks.py  test_monte_carlo.py
backend/tests/services/: test_historical.py  test_ticker_cache.py
docs/: api.md  architecture.md  devops.md  future-ideas.md  plan.md  setup-guide.md
docs/adr/: 0001-react-fastapi-over-streamlit.md  0002-postgres-over-mysql.md  0003-cloudflare-pages-over-vercel.md  0004-oxblood-theme-as-v1-visual.md  0005-dividends-as-continuous-yield.md
docs/design/: claude-design-brief.md  claude-design-output.html  tailwind-extension.snippet.ts  tokens.md  wireframes.md
docs/math/: black-scholes.md
docs/risk/: conventions.md  sanity-cases.md
docs/security/: checklist.md  secrets.md  threat-model.md
docs/source/: transcript.md
docs/superpowers/plans/: 2026-05-04-auth-and-per-user-history.md  2026-05-04-dividends.md
docs/superpowers/specs/: 2026-05-04-auth-and-per-user-history-design.md  2026-05-04-dividends-design.md
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/public/: _headers  _redirects
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthButtons.tsx  BacktestChart.test.tsx  BacktestChart.tsx  BacktestForm.test.tsx  BacktestForm.tsx  ComparePanel.test.tsx  ComparePanel.tsx  GreeksPanel.test.tsx  GreeksPanel.tsx  HeatMap.test.tsx  HeatMap.tsx  HeatMapControls.test.tsx  HeatMapControls.tsx  Icon.tsx  InputForm.test.tsx  InputForm.tsx  LayoutShell.test.tsx  LayoutShell.tsx  MetricCard.tsx  ModelSelector.test.tsx  ModelSelector.tsx  NumField.test.tsx  NumField.tsx  ResultColumn.test.tsx  ResultColumn.tsx  ResultPanel.test.tsx  ResultPanel.tsx  TickerAutocomplete.test.tsx  TickerAutocomplete.tsx
frontend/src/data/: sp500.json
frontend/src/lib/: api.test.ts  api.ts  auth-callback.test.tsx  auth-callback.tsx  backtest.api.test.ts  format.ts  heatMapColors.test.ts  heatMapColors.ts  heatmap.api.test.ts  screens.ts  ticker.api.test.ts
frontend/src/screens/: BacktestScreen.tsx  HeatMapScreen.test.tsx  HeatMapScreen.tsx  HistoryScreen.test.tsx  HistoryScreen.tsx  Placeholder.tsx  PricingScreen.tsx
frontend/src/styles/: components.css  tokens.css
frontend/src/test/: App.test.tsx  auth0-mock.ts
