[project]
name = "trader-backend"
version = "0.1.0"
description = "Trader backend, FastAPI service for the Black Scholes options pricer."
authors = [
    { name = "Mustafan4x", email = "Mustafa421670@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
trader-repl = "app.repl:main"
trader-serve = "app.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Pricing module signatures use textbook notation (S, K, T) per
# docs/math/black-scholes.md and docs/risk/conventions.md. Quant Validator
# tests bind by these names. PEP8 N803 does not apply to math symbols.
"app/pricing/*.py" = ["N803"]
"tests/pricing/*.py" = ["N803"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
