[project]
name = "vega-backend"
version = "0.1.0"
description = "Vega backend, FastAPI service for the Black Scholes options pricer."
authors = [
    { name = "Mustafan4x", email = "Mustafa421670@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.3",
    "pyjwt[crypto]>=2.12.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.46.0",
    "yfinance>=1.3.0",
]

[project.scripts]
vega-repl = "app.repl:main"
vega-serve = "app.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Pricing module signatures use textbook notation (S, K, T) per
# docs/math/black-scholes.md and docs/risk/conventions.md. Quant Validator
# tests bind by these names. PEP8 N803 does not apply to math symbols.
"app/pricing/*.py" = ["N803", "N806"]
"tests/pricing/*.py" = ["N802", "N803", "N806"]
"app/api/heatmap.py" = ["N803", "N806"]
"tests/api/test_heatmap.py" = ["N803", "N806"]
"app/api/price.py" = ["N803", "N806"]
"app/pricing/binomial.py" = ["N803", "N806"]
"app/pricing/monte_carlo.py" = ["N803", "N806"]
"tests/pricing/test_binomial.py" = ["N802", "N803", "N806"]
"tests/pricing/test_monte_carlo.py" = ["N802", "N803", "N806"]
# FastAPI's idiomatic Depends() default is a false positive for B008.
"app/api/calculations.py" = ["B008", "N803"]
"app/api/tickers.py" = ["B008"]
"app/api/backtest.py" = ["B008"]
"app/backtest/engine.py" = ["N803", "N806"]
# TickerNotFound mirrors stdlib LookupError/KeyError naming;
# TickerUpstreamTimeout mirrors stdlib TimeoutError. Both intentionally
# omit the Error suffix to match the stdlib base classes they extend.
"app/services/tickers.py" = ["N818"]
"app/services/historical.py" = ["N818"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
